--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>coming soon!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This Domain Has Been Seized</title>
+</head>
+<body>
+    <img src="unnamed.png" alt="This domain has been seized by the Federal Bureau of Investigation">
+</body>
+</html>
