--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>This Domain Has Been Seized</title>
 </head>
 <body>
-    <img src="unnamed.png" alt="This domain has been seized by the Federal Bureau of Investigation">
+    <h1>403 Forbidden</h1>
 </body>
 </html>
